feat: Adds virtual entity ids (#155)